# Distortion-aware-conv-filter

./: .gitignore  CMakeLists.txt  Makefile  README.md  distortion_aware_ops.py  distortion_filter.py  filter.py  filter_movement_test.py  grad_cam.py  gradcam_test.py  ldr2hdr.py  loadMetaData.py  main.py  main_cnn.py  model.py  ops.py  optimizer_alexnet.py  random_tone_map.cpp  skynet.py  test.py  utils.py
dataset/class10_tfrecord_train/n01440764/: n01440764_10026.tfrecord  n01440764_10027.tfrecord  n01440764_10029.tfrecord  n01440764_10040.tfrecord  n01440764_10042.tfrecord  n01440764_10043.tfrecord  n01440764_10048.tfrecord  n01440764_10066.tfrecord  n01440764_10074.tfrecord  n01440764_1009.tfrecord  n01440764_10095.tfrecord  n01440764_10108.tfrecord  n01440764_10110.tfrecord  n01440764_10120.tfrecord  n01440764_10124.tfrecord  n01440764_10150.tfrecord  n01440764_10159.tfrecord  n01440764_10162.tfrecord  n01440764_10183.tfrecord  n01440764_10194.tfrecord  n01440764_10211.tfrecord  n01440764_10218.tfrecord  n01440764_10227.tfrecord  n01440764_1024.tfrecord  n01440764_10251.tfrecord  n01440764_10254.tfrecord  n01440764_10281.tfrecord  n01440764_10290.tfrecord  n01440764_10293.tfrecord  n01440764_10307.tfrecord  n01440764_10317.tfrecord  n01440764_10319.tfrecord  n01440764_10320.tfrecord  n01440764_10323.tfrecord  n01440764_10331.tfrecord  n01440764_10342.tfrecord  n01440764_10361.tfrecord  n01440764_10365.tfrecord  n01440764_10373.tfrecord  n01440764_10380.tfrecord  (+1260 more)
dataset/class10_tfrecord_train/n01484850/: n01484850_10016.tfrecord  (+1299 more)
test/: test.py  test2.py  test3.py
(+10903 files in other folders)
